Replace usage of webpack JS modules by simple concatenation & fix navigation toggler visibility

--- a/resources/css/less/header.less
+++ b/resources/css/less/header.less
@@ -331,7 +331,6 @@ header {
 .nav-toggler-wrapper {
     .android-highlight-fix;
     cursor: pointer;
-    display: block;
     position: absolute;
     right: 0px;
     top: 0px;
